# Sphere-in-OpenGL

./: .gitignore  CMakeLists.txt  README.md
shaders/: app1b0.glsl.frag  app1b0.glsl.vert  app1b1.glsl.frag  app1b1.glsl.geom  app1b1.glsl.vert
source/: Sphere.vcxproj  app1b.c  app1b.h  app1bproc.c  lights.c  lights.h  timer.c  utilities.c  utilities.h
